KisClipboard: remove assert on clipboard being cleared

6399b0203e7c7e8fa6fc40e4fdbe4a72cae2f304 already covers it enough, so
it's safe to bail out now.

BUG:468494
CCBUG:462006
CCBUG:465128
(cherry picked from commit f4f069cbea3dd961aed23e3abbc67460821b2da9)