libs/ui/kis_clipboard.cc
@@ -457,7 +457,11 @@ KisPaintDeviceSP KisClipboard::clipFromBoardContents(
             return qimage;
         }();
 
-        KIS_ASSERT(!qimage.isNull());
+        KIS_SAFE_ASSERT_RECOVER(!qimage.isNull())
+        {
+            warnKrita << "Clipboard was cleared before loading image";
+            return nullptr;
+        }
 
         int behaviour = pasteBehaviourOverride;
         bool saveColorSetting = false;
